Use built-in Base64 decoder (#109)